kubernetes/apps/base/webdev/debtmanager/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: debtmanager
    app.kubernetes.io/instance: debtmanager
    app.kubernetes.io/name: debtmanager
  name: debtmanager
  namespace: webdev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: debtmanager
  template:
    metadata:
      labels:
        app: debtmanager
        app.kubernetes.io/name: debtmanager
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: ghcr.io/fma965/debt-manager:v1.0.0
        name: debtmanager
        ports:
        - containerPort: 81
          hostPort: 81
          protocol: TCP
        - containerPort: 80
          hostPort: 80
          protocol: TCP
